# potato8

./: CMakeLists.txt  README.md
src/: potato8.cpp  potato8.h  potato_font.h  potato_ops.cpp  potato_ops.h  potato_ui.cpp  potato_ui.h
